# gitarg

./: .gitignore  LICENSE  README.md
client/: index.html
client/css/: global.css
client/js/: actions.js  app.js  compute.js  constants.js  db.js  router.js  server.js  state.js
client/js/actions/: actions.js  add.js  paste.js  remove.js  set.js  toggle.js
client/js/compute/: compute.js  graph.js  infer.js  inferConnectedness.js  inferProbabilities.js  modifyText.js  premiseTree.js  probabilities.js  related.js
client/js/views/: app.js  controls.js  events.js  graph.js  modal.js  saves.js  settings.js  shared.js  statements.js
client/js/views/statement/: conclusion.js  premises.js  statement.js
client/js/views/statement/conclusion/: causation.js  conclusion.js  observation.js  quote.js  text.js
client/js/views/statement/premises/: causalNet.js  connectedness.js  links.js  premises.js  statements.js
server/infer/: CMakeLists.txt  lambda_function.py  main.cpp
server/infer-cpp/: main.cpp
